2006-05-14  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/widgets/toolbox.cpp: Slightly increase size of the
	 connector toolbar buttons to match button sizes on other
	 toolbars.

2006-05-13  verbalshadow  <verbalshadow@gmail.com>

	* src/dyna-draw-context.cpp, src/desktop-style.cpp,
	  src/desktop-style.h:

	  Calligraphy tool now draws in the last used color or the
	  tool style depending on the Preference setting.
	  
2006-05-11  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/selection-chemistry.cpp, src/sp-conn-end-pair.cpp:

	  When moving/transforming connectors, only detach connectors
	  from objects that are not part of the selection.  Previously,
	  connectors moved as part of a selection would be detached from
	  all objects.  This has been requested several times via email.
	  The change also fixes bug #1383806.

	* src/ui/dialog/inkscape-preferences.cpp,
	  src/ui/dialog/inkscape-preferences.h, src/connector-context.cpp:

	  Add a preferences setting to the connector tool for setting
	  whether or not connectors attach to text objects.  This change
	  addresses feature request #1434292.
	  
2006-05-09  Carl Hetherington  <inkscape@carlh.net>

	* src/nodepath.cpp: fix silly bug with snapping node edits.
	
	* src/snapper.cpp, src/snapper.h, src/sp-namedview.cpp:
	  re-enable link between grid visibility and grid snap.

2006-05-08  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* conn-avoid-ref.cpp: Fix a crashbug that could occur in files
	  containing connectors if they were loaded from the file chooser
	  or from the recent file list.  Fixes bug #1458820.

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/display/curve.cpp:

	  always make local copy of path data so that we have control over memory
	  policy

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/display/curve.h, src/display/curve.cpp, src/dropper-context.cpp:

	  get rid of sp_curve_new_from_static_bpath() in a bid to simplify curve
	  memory management
